regis. form, event n alls mein changes

--- a/Synergybackup/form.html
+++ b/Synergybackup/form.html
@@ -1,65 +1,140 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Register</title>
-        <link rel="stylesheet" href="form.css">
-    </head>
-    <body>
+<head>
+    <title>Register</title>
+    <link rel="stylesheet" href="form.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="script.js" defer></script>
+
+    <style>
+        body {
+            background: url('sports-background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            font-family: Arial, sans-serif;
+
+            .form_wrapper {
+            background: #FFD700; /* Solid Yellow Background */
+            padding: 35px;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+        }
+        .form_wrapper {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            width: 50%;
+            margin: auto;
+            margin-top: 50px;
+        }
+        h2 {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
     <div class="form_wrapper">
-    <div class="form_container">
-      <div class="title_container">
-        <h2>Register Here</h2>
-      </div>
-      <div class="row clearfix">
-        <div class="">
-          <form>
-            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
-                <input type="text" name="email" placeholder="Name" required />
+        <div class="form_container">
+            <div class="title_container">
+                <h2>Register Here</h2>
             </div>
+            <div class="row clearfix">
+                <div class="">
+                    <form id="registrationForm">
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
+                            <input type="text" name="name" placeholder="Name" required />
+                        </div>
 
-            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-phone"></i></span>
-                <input type="text" name="email" placeholder="Contact Number" required />
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-phone"></i></span>
+                            <input type="text" name="contact" placeholder="Contact Number" required />
+                        </div>
+
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-university"></i></span>
+                            <input type="text" name="college" placeholder="College Name" required />
+                        </div>
+
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+                            <input type="email" name="email" placeholder="Email" required />
+                        </div>
+
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
+                            <input type="text" name="teamName" placeholder="Team Name (If Individual Add Your Name)" required />
+                        </div>
+
+                        <div class="input_field select_option">
+                            <select name="event" required>
+                                <option value="" disabled selected>Select Event</option>
+                                <option>ATHLETICS</option>
+                                <option>VOLLEYBALL</option>
+                                <option>TABLE TENNIS</option>
+                                <option>BADMINTON</option>
+                                <option>CRICKET</option>
+                                <option>FOOTBALL</option>
+                                <option>BASKETBALL</option>
+                                <option>KHO KHO</option>
+                            </select>
+                            <div class="select_arrow"></div>
+                        </div>
+
+                        <h3>Team Members</h3>
+                        <div id="teamMembers">
+                            <script>
+                                for (let i = 1; i <= 10; i++) {
+                                    document.write(`
+                                        <div class="input_field">
+                                            <input type="text" name="member${i}" placeholder="Member ${i} Name" required />
+                                            <select name="role${i}" class="role" required>
+                                                <option value="">Select Role</option>
+                                                <option value="Member">Member</option>
+                                                <option value="Captain">Captain</option>
+                                                <option value="Vice Captain">Vice Captain</option>
+                                            </select>
+                                        </div>
+                                    `);
+                                }
+                            </script>
+                        </div>
+
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-id-card"></i></span>
+                            <input type="text" placeholder="Upload Your College ID Card:" disabled />
+                        </div>
+                        <input type="file" name="college_id" id="college_id" accept="image/*" capture="environment" required><br><br>
+
+                        <div class="input_field"> <span><i aria-hidden="true" class="fa fa-file"></i></span>
+                            <input type="text" placeholder="Upload Payment Screenshot:" disabled />
+                        </div>
+                        <input type="file" name="payment_screenshot" id="payment_screenshot" accept="image/*" capture="environment" required><br><br>
+
+                        <input class="button" type="submit" value="Register" />
+                        <button type="button" onclick="generatePDF()">Generate PDF</button>
+                    </form>
+                </div>
             </div>
-
-            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-university"></i></span>
-                <input type="text" name="email" placeholder="College Name" required />
-            </div>
-
-            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
-              <input type="email" name="email" placeholder="Email" required />
-            </div>
-
-            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
-                <input type="text" name="email" placeholder="Team Name (If Individual Add Your Name)" required />
-            </div>
-
-            <div class="input_field select_option">
-              <select>
-                <option>Select Event</option>
-                <option>ATHLETICS</option>
-                <option>VOLLEYBALL</option>
-                <option>TABLE TENNIS</option>
-                <option>BADMINTON</option>
-                <option>CRICKET</option>
-                <option>FOOTBALL</option>
-                <option>BASKETBALL</option>
-                <option>KHO KHO</option>
-              </select>
-              <div class="select_arrow"></div>
-            </div>
-
-            <div class="input_field"> <span><i aria-hidden="true" class="fa fa-file"></i></span>
-                <input type="text" placeholder="Select a File to Upload the Ss of Payment:" disabled />
-            </div>
-
-            <input type="file" name="file" id="'file"><br><br><br>
-            <input class="button" type="submit" value="Register" />
-
-          </form>
         </div>
-      </div>
     </div>
-    </div>
-  <script src="https://use.fontawesome.com/4ecc3dbb0b.js"></script>
-    </body>
+
+    <script>
+        function generatePDF() {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
+
+            let content = "Registration Details\n\n";
+            const form = document.getElementById("registrationForm");
+
+            for (let element of form.elements) {
+                if (element.type !== "submit" && element.type !== "button" && element.type !== "file") {
+                    content += `${element.placeholder || element.name}: ${element.value}\n`;
+                }
+            }
+
+            doc.text(content, 10, 10);
+            doc.save("Registration.pdf");
+        }
+    </script>
+
+    <script src="https://use.fontawesome.com/4ecc3dbb0b.js"></script>
+</body>
 </html>
