--- a/Synergybackup/event.html
+++ b/Synergybackup/event.html
@@ -29,7 +29,36 @@
     <link rel="shortcut icon" href="img/synergy.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
+<style>
+    .moving-ticker {
+        position: fixed;
+        top: 80px; /* Adjust to place below navbar */
+        width: 100%;
+        background-color: #1d7260; /* Adjust background color */
+        color: white;
+        font-size: 18px;
+        font-weight: bold;
+        padding: 10px;
+        white-space: nowrap;
+        overflow: hidden;
+        z-index: 1000;
+    }
 
+    .moving-ticker span {
+        display: inline-block;
+        padding-left: 100%;
+        animation: moveLeft 25s linear infinite;
+    }
+
+    @keyframes moveLeft {
+        from {
+            transform: translateX(100%);
+        }
+        to {
+            transform: translateX(-100%);
+        }
+    }
+</style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
@@ -141,6 +170,7 @@
         </div>
     </nav>
     <!-- END nav -->
+
     <!-- Sponsors stylesheet -->
     <style>
         .sponsors {
@@ -296,6 +326,8 @@
                 font-size: 18px;
             }
         }
+
+
     </style>
     <!--End  Sponsors stylesheet -->
     <!-- Sponsors code -->
@@ -476,6 +508,14 @@
     <!--End Sponsors code -->
     <section class="hero-wrap hero-wrap-2" style="background-image: url('img/eventsBg.JPG');"
         data-stellar-background-ratio="0.5">
+        
+    <!--Registration button-->
+
+    <div class="register-container">
+        <a href="form.html" class="register-button">Register for Ignite</a>
+    </div>
+    
+    <!--Registration button-->
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -494,6 +534,29 @@
             color: orange;
             font-weight: bold;
         }
+
+        .register-container {
+    display: flex;
+    justify-content: center;  /* Centers horizontally */
+    align-items: center;  /* Centers vertically (if needed) */
+    height: 100vh;  /* Adjust this based on your layout */
+}
+
+.register-button {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #ff9500;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background 0.3s ease;
+}
+
+.register-button:hover {
+    background-color: #000000;
+}
     </style>
     <!-- EVENTS -->
 
