--- a/Synergybackup/event.html
+++ b/Synergybackup/event.html
@@ -29,25 +29,54 @@
     <link rel="shortcut icon" href="img/synergy.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
+<!-- Floating Registration Button -->
+<a href="registration.html" class="floating-btn" target="_blank">
+    Register Now
+</a>
+
+<!-- Floating Registration Button -->
+<a href="form.html" class="floating-btn" target="_blank">
+    Register Now
+</a>
+
+<div class="moving-ticker">
+    <span>🚀 Register Now for Synergy 2025 | Limited Slots Available! 🚀</span>
+</div>
+
+<div class="moving-ticker">
+    <div class="ticker-wrapper">
+        <a href="form.html">
+            Unleash your game, embrace the spirit! 🏆 Register now for SYNERGY 2025, the ultimate sports fest of IGDTUW! 
+        </a>
+    </div>
+</div>
+
 <style>
     .moving-ticker {
-        position: fixed;
-        top: 80px; /* Adjust to place below navbar */
         width: 100%;
-        background-color: #1d7260; /* Adjust background color */
-        color: white;
-        font-size: 18px;
-        font-weight: bold;
-        padding: 10px;
-        white-space: nowrap;
         overflow: hidden;
-        z-index: 1000;
+        position: relative;
+        background-color: teal;
+        padding: 10px 0;
+        white-space: nowrap;
     }
 
-    .moving-ticker span {
+    .ticker-wrapper {
         display: inline-block;
-        padding-left: 100%;
-        animation: moveLeft 25s linear infinite;
+        white-space: nowrap;
+        animation: moveLeft 30s linear infinite;
+    }
+
+    .ticker-wrapper a {
+        color: white;
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .ticker-wrapper a:hover {
+        color: rgb(252, 252, 225);
+        text-decoration: underline;
     }
 
     @keyframes moveLeft {
@@ -59,6 +88,8 @@
         }
     }
 </style>
+
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
@@ -170,7 +201,6 @@
         </div>
     </nav>
     <!-- END nav -->
-
     <!-- Sponsors stylesheet -->
     <style>
         .sponsors {
@@ -326,8 +356,6 @@
                 font-size: 18px;
             }
         }
-
-
     </style>
     <!--End  Sponsors stylesheet -->
     <!-- Sponsors code -->
@@ -508,14 +536,6 @@
     <!--End Sponsors code -->
     <section class="hero-wrap hero-wrap-2" style="background-image: url('img/eventsBg.JPG');"
         data-stellar-background-ratio="0.5">
-        
-    <!--Registration button-->
-
-    <div class="register-container">
-        <a href="form.html" class="register-button">Register for Ignite</a>
-    </div>
-    
-    <!--Registration button-->
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-end justify-content-center">
@@ -534,29 +554,6 @@
             color: orange;
             font-weight: bold;
         }
-
-        .register-container {
-    display: flex;
-    justify-content: center;  /* Centers horizontally */
-    align-items: center;  /* Centers vertically (if needed) */
-    height: 100vh;  /* Adjust this based on your layout */
-}
-
-.register-button {
-    display: inline-block;
-    padding: 12px 24px;
-    background-color: #ff9500;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    border-radius: 8px;
-    font-weight: bold;
-    transition: background 0.3s ease;
-}
-
-.register-button:hover {
-    background-color: #000000;
-}
     </style>
     <!-- EVENTS -->
 
@@ -1294,4 +1291,4 @@
     </script>
 </body>
 
-</html>
+</html
