--- a/Synergybackup/event.html
+++ b/Synergybackup/event.html
@@ -46,7 +46,7 @@
 <div class="moving-ticker">
     <div class="ticker-wrapper">
         <a href="form.html">
-            Unleash your game, embrace the spirit! 🏆 Register now for SYNERGY 2025, the ultimate sports fest of IGDTUW! 
+            Unleash your game, embrace the spirit! 🏆 Register now for IGNITE 2025, the ultimate sports fest of IGDTUW! 
         </a>
     </div>
 </div>
